--- a/index.css
+++ b/index.css
@@ -21,6 +21,8 @@ button {
     font-weight: bold;
 }
 
+/* Style the button according to the provided design */
+
 ul {
     margin-top: 20px;
     list-style: none;
@@ -34,3 +36,5 @@ li {
 a {
     color: #5f9341;
 }
+
+
